; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/ntdll/extr_reg.c_get_key_value.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/ntdll/extr_reg.c_get_key_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32*, i32*, i32*, i32, i32 }
%struct.TYPE_6__ = type { i64 }

@OBJ_CASE_INSENSITIVE = common dso_local global i32 0, align 4
@KEY_ALL_ACCESS = common dso_local global i32 0, align 4
@STATUS_OBJECT_NAME_NOT_FOUND = common dso_local global i64 0, align 8
@STATUS_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [34 x i8] c"%08x: NtCreateKey failed: 0x%08x\0A\00", align 1
@value_str = common dso_local global i32 0, align 4
@KeyValuePartialInformation = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [38 x i8] c"%08x: NtQueryValueKey failed: 0x%08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32)* @get_key_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_key_value(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca [32 x i8], align 16
  %9 = alloca i64, align 8
  %10 = alloca %struct.TYPE_5__, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.TYPE_6__*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %16 = getelementptr inbounds [32 x i8], [32 x i8]* %8, i64 0, i64 0
  %17 = bitcast i8* %16 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %17, %struct.TYPE_6__** %13, align 8
  store i32 32, i32* %15, align 4
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  store i32 40, i32* %18, align 8
  %19 = load i32, i32* %5, align 4
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 5
  store i32 %19, i32* %20, align 4
  %21 = load i32, i32* @OBJ_CASE_INSENSITIVE, align 4
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 4
  store i32 %21, i32* %22, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 3
  store i32* %11, i32** %23, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 2
  store i32* null, i32** %24, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 1
  store i32* null, i32** %25, align 8
  %26 = load i8*, i8** %6, align 8
  %27 = call i32 @pRtlCreateUnicodeStringFromAsciiz(i32* %11, i8* %26)
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* @KEY_ALL_ACCESS, align 4
  %30 = or i32 %28, %29
  %31 = call i64 @pNtCreateKey(i32* %12, i32 %30, %struct.TYPE_5__* %10, i32 0, i32 0, i32 0, i32 0)
  store i64 %31, i64* %9, align 8
  %32 = load i64, i64* %9, align 8
  %33 = load i64, i64* @STATUS_OBJECT_NAME_NOT_FOUND, align 8
  %34 = icmp eq i64 %32, %33
  br i1 %34, label %35, label %36

35:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %71

36:                                               ; preds = %3
  %37 = load i64, i64* %9, align 8
  %38 = load i64, i64* @STATUS_SUCCESS, align 8
  %39 = icmp eq i64 %37, %38
  %40 = zext i1 %39 to i32
  %41 = load i32, i32* %7, align 4
  %42 = load i64, i64* %9, align 8
  %43 = call i32 @ok(i32 %40, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %41, i64 %42)
  %44 = load i32, i32* %12, align 4
  %45 = load i32, i32* @KeyValuePartialInformation, align 4
  %46 = load %struct.TYPE_6__*, %struct.TYPE_6__** %13, align 8
  %47 = load i32, i32* %15, align 4
  %48 = call i64 @pNtQueryValueKey(i32 %44, i32* @value_str, i32 %45, %struct.TYPE_6__* %46, i32 %47, i32* %15)
  store i64 %48, i64* %9, align 8
  %49 = load i64, i64* %9, align 8
  %50 = load i64, i64* @STATUS_OBJECT_NAME_NOT_FOUND, align 8
  %51 = icmp eq i64 %49, %50
  br i1 %51, label %52, label %53

52:                                               ; preds = %36
  store i32 0, i32* %14, align 4
  br label %66

53:                                               ; preds = %36
  %54 = load i64, i64* %9, align 8
  %55 = load i64, i64* @STATUS_SUCCESS, align 8
  %56 = icmp eq i64 %54, %55
  %57 = zext i1 %56 to i32
  %58 = load i32, i32* %7, align 4
  %59 = load i64, i64* %9, align 8
  %60 = call i32 @ok(i32 %57, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.1, i64 0, i64 0), i32 %58, i64 %59)
  %61 = load %struct.TYPE_6__*, %struct.TYPE_6__** %13, align 8
  %62 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %61, i32 0, i32 0
  %63 = load i64, i64* %62, align 8
  %64 = inttoptr i64 %63 to i32*
  %65 = load i32, i32* %64, align 4
  store i32 %65, i32* %14, align 4
  br label %66

66:                                               ; preds = %53, %52
  %67 = load i32, i32* %12, align 4
  %68 = call i32 @pNtClose(i32 %67)
  %69 = call i32 @pRtlFreeUnicodeString(i32* %11)
  %70 = load i32, i32* %14, align 4
  store i32 %70, i32* %4, align 4
  br label %71

71:                                               ; preds = %66, %35
  %72 = load i32, i32* %4, align 4
  ret i32 %72
}

declare dso_local i32 @pRtlCreateUnicodeStringFromAsciiz(i32*, i8*) #1

declare dso_local i64 @pNtCreateKey(i32*, i32, %struct.TYPE_5__*, i32, i32, i32, i32) #1

declare dso_local i32 @ok(i32, i8*, i32, i64) #1

declare dso_local i64 @pNtQueryValueKey(i32, i32*, i32, %struct.TYPE_6__*, i32, i32*) #1

declare dso_local i32 @pNtClose(i32) #1

declare dso_local i32 @pRtlFreeUnicodeString(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
